# halfway-across

./: CMakeLists.txt  README.md
docs/: credits.md  guide.md  manual.md
include/: audio.h  characters.h  fishing.h  halfway.h  handling.h  hunting.h  inventory.h  item.h  journal.h  locations.h  mainwindow.h  player.h  recipe.h  scenarios.h  script.h  transcript.h  world.h
include/core/: audio.h  handling.h  world.h
include/core/handling/: encounterhandler.h  inputhandler.h  msghandler.h  verbhandler.h
include/entities/: characters.h  dialogue.h  locations.h  player.h
include/items/: inventory.h  item.h  recipe.h
include/survival/: fishing.h  hunting.h
include/ui/: mainwindow.h
include/utils/: script.h
resources/: resources.qrc
resources/stylesheets/: stylesheet.qss
src/: audio.cpp  characters.cpp  fishing.cpp  handling.cpp  hunting.cpp  inventory.cpp  item.cpp  journal.cpp  locations.cpp  main.cpp  mainwindow.cpp  mainwindow.ui  player.cpp  recipe.cpp  scenarios.cpp  script.cpp  transcript.cpp  world.cpp
src/core/: audio.cpp  handling.cpp  world.cpp
src/core/handling/: encounterhandler.cpp  inputhandler.cpp  msghandler.cpp  verbhandler.cpp
src/entities/: characters.cpp  dialogue.cpp  locations.cpp  player.cpp
src/entities/encounters/: amosE1.cpp  iraE1.cpp
src/handling/: audio.cpp  begin.cpp  cook.cpp  drink.cpp  drop.cpp  eat.cpp  handling.cpp  look.cpp  move.cpp  remove.cpp  sit.cpp  sleep.cpp  take.cpp  use.cpp  wait.cpp  wear.cpp
src/items/: inventory.cpp  item.cpp  recipe.cpp
src/scenarios/: amosE1.cpp  iraE1.cpp
src/survival/: fishing.cpp  hunting.cpp
src/ui/: mainwindow.cpp  mainwindow.ui
src/utils/: script.cpp
src/verbs/: ask.cpp  begin.cpp  cook.cpp  craft.cpp  cry.cpp  diagnose.cpp  drink.cpp  drop.cpp  eat.cpp  examine.cpp  fill.cpp  goodbye.cpp  greet.cpp  help.cpp  hunt.cpp  load.cpp  look.cpp  move.cpp  put.cpp  read.cpp  remove.cpp  script.cpp  shoot.cpp  sit.cpp  skin.cpp  sleep.cpp  stand.cpp  take.cpp  tell.cpp  use.cpp  version.cpp  wait.cpp  wear.cpp  yell.cpp
src/verbs/dialogue/: ask.cpp  goodbye.cpp  greet.cpp  talk.cpp  tell.cpp
src/verbs/items/: cook.cpp  craft.cpp  drink.cpp  eat.cpp  examine.cpp  fill.cpp  load.cpp  put.cpp  read.cpp  remove.cpp  skin.cpp  take.cpp  use.cpp  wear.cpp
src/verbs/menu/: begin.cpp
src/verbs/navigation/: look.cpp  move.cpp  sit.cpp  stand.cpp
src/verbs/survival/: cry.cpp  hunt.cpp  shoot.cpp  yell.cpp
src/verbs/time/: sleep.cpp  wait.cpp
src/verbs/utils/: diagnose.cpp  help.cpp  script.cpp  version.cpp
src/verbs/world/: sleep.cpp  wait.cpp
